@@ -2,6 +2,7 @@ ART 3.8
 * Have self service dashboards
 * Fix for error when run with java 7
 * Have configurable roles and permissions
+* Added :reportId: and :jobId: tags
 * Updated jxls
 
 ART 3.7
